# src/main/resources/static/api.yaml
@@ -142,6 +142,7 @@ components:
         application/json:
           schema:
             type: object
+            title: deletedOfferIds
             properties:
               offerIds:
                 type: array
@@ -647,7 +648,7 @@ paths:
                     $ref: '#/components/schemas/order'
               required:
                 - orders
-        description: ''
+        description: orders
       description: Place orders
     get:
       summary: get orders
@@ -663,7 +664,7 @@ paths:
             items:
               type: string
           in: query
-          name: orderIds[]
+          name: orderIds
           required: true
           description: order IDs to get
       description: Get orders by ID
